--- a/success.html
+++ b/success.html
@@ -51,12 +51,20 @@
       return new URLSearchParams(window.location.search).get(name);
     }
 
-    function getDeviceId() {
-      let id = localStorage.getItem("wt_device_id");
-      if (!id) {
+    // 7.2.1 — Gera 1 deviceId e guarda no localStorage (não muda a cada clique)
+    function getOrCreateDeviceId() {
+      const key = "wt_device_id"; // pode manter esse nome
+      let id = localStorage.getItem(key);
+      if (id) return id;
+
+      if (window.crypto && crypto.randomUUID) {
         id = crypto.randomUUID();
-        localStorage.setItem("wt_device_id", id);
+      } else {
+        // fallback simples caso randomUUID não exista
+        id = "dev-" + Math.random().toString(16).slice(2) + Date.now().toString(16);
       }
+
+      localStorage.setItem(key, id);
       return id;
     }
 
@@ -136,6 +144,7 @@
       }
     }
 
+    // 7.2.2 — Verify SEMPRE usando o mesmo deviceId do localStorage
     async function verifyNow() {
       const out = document.getElementById("verifyResult");
       if (!currentLicenseKey) {
@@ -146,12 +155,15 @@
       out.textContent = "Verifying...";
 
       try {
+        const deviceId = getOrCreateDeviceId();
+        console.log("[WildTerra] deviceId:", deviceId);
+
         const r = await fetch(`${API}/license/verify`, {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({
             licenseKey: currentLicenseKey,
-            deviceId: getDeviceId(),
+            deviceId: deviceId,
             app: "wildterra-site",
             ver: "1.0.0"
           })
